a spacing problem solved

--- a/style.css
+++ b/style.css
@@ -301,6 +301,7 @@
   align-items: center;
   margin: auto;
   gap: 15px;
+  margin-bottom: 50px;
 }
 .image-1{
    width: 220px;
